baml_language/crates/baml_lsp_actions_tests/test_files/syntax/template_string/invalid.baml
template_string FunctionWithBadParams(
    param: Unknown,
    param2: Unknown2[],
    param3: string
) #"
    {{ param.foo }}
    {{ param2[0].doc }}
    {{ param3 }}
"#

// warning: 'param' is undefined, expected class
//   -->  template_string/invalid.baml:6
//    |
//  5 | ) #"
//  6 |     {{ param.foo }}
//    |
// warning: 'param' is undefined, expected class
//   -->  template_string/invalid.baml:6
//    |
//  5 | ) #"
//  6 |     {{ param.foo }}
//    |
// error: Type `Unknown` does not exist. Did you mean one of these: `int`, `float`, `bool`, `string`, `true`, `false`?
//   -->  template_string/invalid.baml:2
//    |
//  1 | template_string FunctionWithBadParams(
//  2 |     param: Unknown,
//    |
// error: Type `Unknown2` does not exist. Did you mean one of these: `string`, `int`, `float`, `bool`, `true`, `false`?
//   -->  template_string/invalid.baml:3
//    |
//  2 |     param: Unknown,
//  3 |     param2: Unknown2[],
//    |

//----
//- diagnostics
// Error: Unknown type `Unknown`
//    в•ӯв”Җ[ template_string_invalid.baml:2:11 ]
//    в”Ӯ
//  2 в”Ӯ     param: Unknown,
//    в”Ӯ           в”Җв”Җв”Җв”Җв”¬в”Җв”Җв”Җ  
//    в”Ӯ               в•°в”Җв”Җв”Җв”Җв”Җ Unknown type `Unknown`
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0002
// в”Җв”Җв”Җв•Ҝ
// Error: Unknown type `Unknown2`
//    в•ӯв”Җ[ template_string_invalid.baml:3:12 ]
//    в”Ӯ
//  3 в”Ӯ     param2: Unknown2[],
//    в”Ӯ            в”Җв”Җв”Җв”Җв”Җв”¬в”Җв”Җв”Җв”Җв”Җ  
//    в”Ӯ                 в•°в”Җв”Җв”Җв”Җв”Җв”Җв”Җ Unknown type `Unknown2`
//    в”Ӯ 
//    в”Ӯ Note: Error code: E0002
// в”Җв”Җв”Җв•Ҝ
